--- a/Python/estilos.qss
+++ b/Python/estilos.qss
@@ -1,3 +1,9 @@
+/*Universidad Autónoma Metropolitana Unidad Azcapotzalco*/
+/*Nombre: Martin Chavez Jaramillo*/
+/*Matrícula: 2163036728*/
+/*Ingeniería en Computación*/
+/*Fecha: 23 Septiembre 2025*/
+/*Módulo de diseño de la Interfaz*/
 /*estilos.qss*/
 
 /* Fondo general */
